--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ body {
     background:lightblue;
     font-family:Arial, Helvetica, sans-serif;
 }
+
+.assignment {
+    display:flex;
+    padding:10px;
+    margin:10px;
+    background-color: lightcyan;
+}
+.assignment img {
+width:200px;
+padding:10px;
+}
+
 h1 {
     text-align:center;
     color: darkgoldenrod;
