--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background:lightblue;
+    background: #0D0B0A;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -7,14 +7,32 @@ body {
     display:flex;
     padding:10px;
     margin:10px;
-    background-color: lightcyan;
+    background-color: #6C7073;
+    border-radius:5px;
 }
 .assignment img {
-width:200px;
-padding:10px;
-}
+    width:200px;
+    margin: 10px;
+    border: 4px solid #B8BCBF;
 
+}
+.assignment img:hover {
+    border: 4px dashed #FFF;
+
+}
 h1 {
     text-align:center;
-    color: darkgoldenrod;
+    color: #F2F2F2;
+}
+h1:hover {
+
+    color: #E01936;
+}
+a {
+        text-decoration: none;
+        color: #B8BCBF;
+}
+
+a:hover {
+        color:#FFF;
 }
