--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+
 body {
-    background-color: pink;
-}
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #333; /* Text color */
+    background-color: #f0f0f0; /* Background color */
+  }
+  a {
+    text-decoration: ;
+    color: #ff6600;
+  }
