--- a/assignments/assignment1/assignment2/styles.css
+++ b/assignments/assignment1/assignment2/styles.css
@@ -4,3 +4,7 @@ table {
     background-color: darkgreen;
     border:4px solid black;
 }
+body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background:url(plaing.jpg);
+}
