please update git

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: yellowgreen;
     background-color: #333333;
+    background:#333333;
 }
 #practice {
   background-color: darkgreen;
