--- a/assignments/assignment1/styles.css
+++ b/assignments/assignment1/styles.css
@@ -6,4 +6,47 @@ table {
     border-collapse: collapse;
     background-color: darkgreen;
     border:4px solid black;
+}body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: yellowgreen;
+    background-color: #333333;
+    background:#333333;
+}
+#practice {
+  background-color: darkgreen;
+  margin: auto;
+  width: 80%;
+  padding: 20px;
+  border-radius: 10px;
+}
+p {
+  color:grey;
+}
+  a {
+    color: black;
+    text-decoration: none;
+    padding: 4px;
+    border-radius: 3px;
+
+  }
+  a:hover {
+    background-color: purple;
+  }
+table {
+    border-collapse: collapse;
+}
+th, td  {
+border: 2px dotted Green;
+padding: 4px;
+}
+#italic-stuff
+{
+  font-style: italic;
+}
+#special-typo a:hover{
+  background-color:darkolivegreen;
+}
+
+#special-typo {
+
 }
