--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,97 @@
+
+h1 {
+  text-align: center;
+}
+
 body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: yellowgreen;
-    background-color: #333333;
-    background:#333333;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: chartreuse;
 }
-#practice {
-  background-color: darkgreen;
-  margin: auto;
-  width: 60%;
-  padding: 20px;
-  border-radius: 10px;
-}
-p {
-  color:grey;
-}
-  a {
-    color: black;
-    text-decoration: none;
-    padding: 4px;
-    border-radius: 3px;
 
+#container {
+  display: flex;
+  flex-wrap: wrap; /* Wrap the main boxes when screen size is reduced */
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.box {
+  width: 450px;
+  height:300px;
+  background-color:forestgreen;
+  color: #fff;
+  display: flex;
+  flex-direction: column; /* Stack inner boxes vertically */
+  align-items: center;
+  margin: 10px;
+}
+
+.inner-box {
+
+  
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+
+
+/**/
+.container-head {
+  display: flex;
+  flex-direction: column; /* Stack elements vertically on mobile screens */
+  position: relative; /* Enable positioning of Tyler Korth */
+}
+
+.header {
+  display: flex;
+  flex-wrap: wrap; /* Wrap elements on smaller screens */
+  align-items: flex-start; /* Align to the top left corner on larger screens */
+  justify-content: center;
+}
+
+.header h3 {
+  order: 2; /* Change the order on smaller screens */
+  position: absolute; /* Position Tyler Korth absolutely */
+  top: 0; /* Position at the top */
+  left: 0; /* Position at the left */
+}
+
+.header h1 {
+  order: 1; /* Change the order on smaller screens */
+}
+
+h1 {
+  text-align: center; /* Center-align Assignments heading */
+}
+
+/* Media query for screens narrower than 600px */
+@media (max-width: 600px) {
+  .header {
+      flex-direction: column; /* Stack elements vertically on smaller screens */
+      align-items: center; /* Center align on smaller screens */
   }
-  a:hover {
-    background-color: purple;
+
+  .header h3 {
+      order: 1; /* Reset the order for smaller screens */
+      position: static; /* Reset positioning for smaller screens */
   }
-table {
-    border-collapse: collapse;
 }
-th, td  {
-border: 2px dotted Green;
-padding: 4px;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
-#italic-stuff
-{
-  font-style: italic;
-}
-#special-typo a:hover{
-  background-color:darkolivegreen;
-}
+a{
+  text-decoration: none;
+  color: black;
 
-#special-typo {
+  padding: 4px;
+  border-radius: 3px;
 
+}
+a:hover {
+  background-color: purple;
 }
