--- a/assignments/assignment5/styles.css
+++ b/assignments/assignment5/styles.css
@@ -2,14 +2,20 @@
 
 .main2 {
     background-color:darkred;
-    padding:50px;
+    padding:150px;
 }
 
 .main3 {
-    background-color: lightcoral;
-    padding:300px;
-}
+background-color:darkred;
+padding:100px;
+background:url(https://place-hold.it/1500x300/CCC);
 
+}
+.main4 {
+    background-color: white;
+    padding:100px;
+    color:black;
+}
 .horizontal-nav ul {
     padding-right: 0px;
 
@@ -177,3 +183,36 @@ li {
     top: 0px;
     width: 100%;
 }
+
+.main4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+#center-box {
+    padding:10px;
+
+
+    background-color:red;
+
+
+    width:300px;
+
+}
+
+#center-box h1 {
+    font-size: 24px;
+}
+
+#center-box h2, p {
+   margin-top: 20px;
+}
+
+
+
+
+
