--- a/assignments/praca4/styles2.css
+++ b/assignments/praca4/styles2.css
@@ -13,39 +13,30 @@ body {
     display:flex;
     position:relative;
     margin-top:10px;
-    margin-right:20%;
-    font-size:20px;
-    flex:1;
-    margin-left:5%;
-}
-
-#info {
-    flex:1;
-    display:flex;
-    position:relative;
-
+    margin-right:5%;
+    font-size:60px;
 }
 
 .name1 {
     display:flex;
-    position:relative;
-
+    position:absolute;
+    margin-left:60%;
     margin-top:0%;
 
 }
 
 .name2 {
     display:flex;
-    position:relative;
-
+    position:absolute;
+    margin-left:60%;
     margin-top:4%;
 
 }
 
 .name3 {
     display:flex;
-    position:relative;
-
+    position:absolute;
+    margin-left:60%;
     margin-top:8%;
 }
 
@@ -53,19 +44,9 @@ header {
     background-color: lightgrey;
     display: flex;
     align-items: center;
-    flex:1;
-    position:relative;
     justify-content: center; 
     width: 90%;
     height: 200px;
-}
-.logo-head {
-    display:flex;
-    position:relative;
-    /* margin-right:60%; */
-    margin-top:0%;
-    margin-left:5%;
-    flex:1;
 }
 
 footer {
@@ -76,18 +57,6 @@ footer {
     justify-content: center; 
     width: 100%;
     height: 120px;
-}
-
-#logo-footer {
-    display:flex;
-    position:relative;
-    flex:1;
-}
-#contact {
-    display:flex;
-    position:relative;
-    flex:1;
-
 }
 content {
     padding: 10px;
@@ -177,11 +146,41 @@ label {
 }
 
 
+/*
+@media only screen and (min-width: 600px) {
+    #main-nav li {
+        display: inline-block;
+    }
+    .columns {
+        display: flex;
+    }
 
+    #hamburger {
+        display: none;
+    }
+    .hide-small {
+        display: block;
+    }
+    content {
+        display:flex;
+    }
+    header {
+        display:flex;
+    }
+    footer {
+        display:flex;
+    }
+    input,label {
+        display:flex;
+    }
+
+
+}
+*/
 @media only screen and (max-width: 600px) {
     .box {
-        width: 90%; 
-        margin: 10px 0;
+        width: 90%; /* Make the boxes take full width on smaller screens */
+        margin: 10px 0; /* Add margin for spacing between the vertically stacked boxes */
 
     }
 
@@ -219,6 +218,11 @@ label {
         display: flex;
     }
 }
-
+.logo {
+    display:flex;
+    position:absolute;
+    margin-right:60%;
+    margin-top:0%;
+}
 
 
