--- a/project/part3/styles2.css
+++ b/project/part3/styles2.css
@@ -1,5 +1,23 @@
+a {
+    color:black;
+    text-decoration:none;
+}
+#vault {
+    width:100px;
+    height:100px;
+}
+
+#train {
+    width:200px;
+    height:200px;
+}
+#hpic {
+    height:100%;
+    width:400px;
+}
+
 body {
-    background-color: silver;
+    background-color: #635985;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
     display: flex;
@@ -50,7 +68,7 @@ body {
 }
 
 header {
-    background-color: lightgrey;
+    background-color: #443C68;
     display: flex;
     align-items: center;
     flex:1;
@@ -69,7 +87,7 @@ header {
 }
 
 footer {
-    background-color: black;
+    background-color: #443C68;
     color:white;
     display: flex;
     align-items: center;
@@ -103,7 +121,7 @@ content {
 .box {
     width: 450px;
     height:400px;
-    background-color:lightgrey;
+    background-color: #443C68;
 
     display: flex;
     flex-direction: column;
@@ -133,12 +151,12 @@ content {
 }
 
 #main-nav ul li:hover button {
-    background-color: lightblue;
+    background-color: #B9B4C7;
 }
 #main-nav ul {
     padding-left: 0px;
     text-align: center;
-    background-color: cornflowerblue;
+    background-color: #2C3333;
 
 }
 
@@ -157,7 +175,7 @@ content {
 }
 
 #main-nav li:hover {
-    background-color: lightblue;
+    background-color: #B9B4C7;
 }
 
 
