--- a/project/part4/styles2.css
+++ b/project/part4/styles2.css
@@ -1,5 +1,23 @@
+a {
+    color:black;
+    text-decoration:none;
+}
+#vault {
+    width:100px;
+    height:100px;
+}
+
+#train {
+    width:200px;
+    height:200px;
+}
+#hpic {
+    height:100%;
+    width:400px;
+}
+
 body {
-    background-color: silver;
+    background-color: #635985;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
     display: flex;
@@ -13,50 +31,81 @@ body {
     display:flex;
     position:relative;
     margin-top:10px;
-    margin-right:5%;
-    font-size:60px;
+    margin-right:20%;
+    font-size:20px;
+    flex:1;
+    margin-left:5%;
+}
+
+#info {
+    flex:1;
+    display:flex;
+    position:relative;
+
 }
 
 .name1 {
     display:flex;
-    position:absolute;
-    margin-left:60%;
+    position:relative;
+
     margin-top:0%;
 
 }
 
 .name2 {
     display:flex;
-    position:absolute;
-    margin-left:60%;
+    position:relative;
+
     margin-top:4%;
 
 }
 
 .name3 {
     display:flex;
-    position:absolute;
-    margin-left:60%;
+    position:relative;
+
     margin-top:8%;
 }
 
 header {
-    background-color: lightgrey;
+    background-color: #443C68;
     display: flex;
     align-items: center;
+    flex:1;
+    position:relative;
     justify-content: center; 
     width: 90%;
     height: 200px;
 }
+.logo-head {
+    display:flex;
+    position:relative;
+    /* margin-right:60%; */
+    margin-top:0%;
+    margin-left:5%;
+    flex:1;
+}
 
 footer {
-    background-color: black;
+    background-color: #443C68;
     color:white;
     display: flex;
     align-items: center;
     justify-content: center; 
     width: 100%;
     height: 120px;
+}
+
+#logo-footer {
+    display:flex;
+    position:relative;
+    flex:1;
+}
+#contact {
+    display:flex;
+    position:relative;
+    flex:1;
+
 }
 content {
     padding: 10px;
@@ -72,7 +121,7 @@ content {
 .box {
     width: 450px;
     height:400px;
-    background-color:lightgrey;
+    background-color: #443C68;
 
     display: flex;
     flex-direction: column;
@@ -102,12 +151,12 @@ content {
 }
 
 #main-nav ul li:hover button {
-    background-color: lightblue;
+    background-color: #B9B4C7;
 }
 #main-nav ul {
     padding-left: 0px;
     text-align: center;
-    background-color: cornflowerblue;
+    background-color: #2C3333;
 
 }
 
@@ -126,7 +175,7 @@ content {
 }
 
 #main-nav li:hover {
-    background-color: lightblue;
+    background-color: #B9B4C7;
 }
 
 
@@ -146,41 +195,11 @@ label {
 }
 
 
-/*
-@media only screen and (min-width: 600px) {
-    #main-nav li {
-        display: inline-block;
-    }
-    .columns {
-        display: flex;
-    }
 
-    #hamburger {
-        display: none;
-    }
-    .hide-small {
-        display: block;
-    }
-    content {
-        display:flex;
-    }
-    header {
-        display:flex;
-    }
-    footer {
-        display:flex;
-    }
-    input,label {
-        display:flex;
-    }
-
-
-}
-*/
 @media only screen and (max-width: 600px) {
     .box {
-        width: 90%; /* Make the boxes take full width on smaller screens */
-        margin: 10px 0; /* Add margin for spacing between the vertically stacked boxes */
+        width: 90%; 
+        margin: 10px 0;
 
     }
 
@@ -218,11 +237,81 @@ label {
         display: flex;
     }
 }
-.logo {
-    display:flex;
-    position:absolute;
-    margin-right:60%;
-    margin-top:0%;
-}
-
-
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  #main-menu {
+    background-color: #595a5c;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  #main-menu ul {
+    float: right;
+    overflow: hidden;
+    margin-right: 2%;
+  }
+  
+  #main-menu li {
+    list-style-type: none;
+    display: inline-block;
+  }
+  
+  #main-menu a {
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+  }
+  
+  form {
+    margin: 0 2%;
+  }
+  
+  form label {
+    font-size: 0.75em;
+    display: block;
+  }
+  
+  form input:not([type="checkbox"]):not([type="radio"]),
+  form textarea,
+  form button,
+  select {
+    font-size: 0.75em;
+    width: 200px;
+    padding: 5px;
+  }
+  
+  input[type="checkbox"],
+  input[type="radio"] {
+    margin-right: 20px;
+    padding: 5px;
+    width: 20px;
+    height: 20px;
+  }
+  
+  input[type="radio"] {
+    margin-right: 10px;
+    width: 18px;
+    height: 18px;
+  }
+  
+  .inline {
+    display: inline;
+  }
+  
+  form textarea {
+    min-height: 200px;
+  }
+  
+  h4 {
+    font-size: 1em;
+    font-weight: 100;
+  }
+  
+  .hidden {
+    display: none;
+  }
