--- a/project/part5/styles3.css
+++ b/project/part5/styles3.css
@@ -129,3 +129,38 @@ footer {
         display: flex;
     }
 }
+.class-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: darkpurple;
+    padding: 20px;
+  }
+  
+  .class-card {
+    background-color: white;
+    border-radius: 5px;
+    margin: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    width:80%;
+  }
+  
+  .class-image {
+    width: 300px; 
+    height: auto;
+    object-fit: cover; 
+  }
+  
+  .class-details {
+    padding: 20px;
+    color: black;
+    flex: 1; 
+  }
+  content {
+    margin: 0;
+    padding: 0;
+    display: flex;
+
+    min-height: 100vh;
+  }
